# omni-resolve

./: .dockerignore  .gitignore  CLAUDE.md  CONTEXT.md  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-push.yml  pr-tests.yml
.kiro/specs/: design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_retention_policy.py
docs/adr/: 0001-circuit-breaker-usage-contract.md
infra/grafana/dashboards/: omniresolve.json
infra/helm/omniresolve/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
infra/prometheus/: prometheus.yml
infra/terraform/: main.tf  outputs.tf  variables.tf
infra/terraform/environments/: aws.tfvars.example  baremetal.tfvars.example  gcp.tfvars.example
services/ai-gateway/: Dockerfile  requirements.txt
services/ai-gateway/ai_gateway/: __init__.py  app.py  config.py  (+2 more)
services/api-gateway/: Dockerfile  requirements.txt
services/escalation-agent/: Dockerfile  requirements.txt
services/execution-agent/: Dockerfile  requirements.txt
services/knowledge-agent/: Dockerfile  requirements.txt
services/triage-agent/: Dockerfile
shared/: circuit_breaker.py  db.py  event_bus.py  models.py  observability.py
tests/integration/: conftest.py  test_end_to_end.py  test_smoke.py
tests/unit/: test_circuit_breaker_unit.py  test_event_bus_property8.py  test_event_bus_rabbitmq.py  test_event_bus_unit.py  test_observability_unit.py  test_state_store_property10.py  test_state_store_property15.py  test_state_store_unit.py
(+51 files in other folders)
